dataset1235/2025-2/805158916/users/1514794398/executions/1584167357_997093868.log
== SUBMISSION (2025-08-27 14:16:12)
-- CODE: 
a = int(input("Numero Qualquer: "))
b = int(input("NUmero Quaisquer: ")
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 2
    b = int(input("NUmero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 2
    b = int(input("NUmero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 2
    b = int(input("NUmero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 2
    b = int(input("NUmero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 2
    b = int(input("NUmero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 2
    b = int(input("NUmero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:33)
-- CODE: 
a = int(input("Numero Qualquer: "))
b = int(input("Numero Quaisquer: ")
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:16:31)
-- CODE: 
a = int(input("Numero Qualquer: "))
b = int(input("Numero Quaisquer: ")
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:16:49)
-- CODE: 
a = int(input("Numero Qualquer: "))
b = int(input("Numero Quaisquer: ")
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:25)
-- CODE: 
a = int(input("Numero Qualquer: "))
b = int(input("Numero Quaisquer: ")
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:17:11)
-- CODE: 
a = int(input("Numero Qualquer: "))
b = int(input("Numero Quaisquer: "))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Numero Qualquer: Numero Quaisquer: 20000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Numero Qualquer: Numero Quaisquer: 5
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Numero Qualquer: Numero Quaisquer: 68
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Numero Qualquer: Numero Quaisquer: 185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Numero Qualquer: Numero Quaisquer: 44
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Numero Qualquer: Numero Quaisquer: 108
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:22)
-- CODE: 
a = int(input("Numero Qualquer: "))
b = int(input("Numero Quaisquer: ")
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:30)
-- CODE: 
a = int(input("Numero Qualquer: "))
b = int(input("Numero Quaisquer: ")
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:29)
-- CODE: 
a = int(input("Numero Qualquer: "))
b = int(input("Numero Quaisquer: ")
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:16:44)
-- CODE: 
a = int(input("Numero Qualquer: "))
b = int(input("Numero Quaisquer: ")
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 2
    b = int(input("Numero Quaisquer: ")
           ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
